--- a/dekstop/UI/menu.ui
+++ b/dekstop/UI/menu.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>forest-fire-8681951_1920.jpg</pixmap>
+    <pixmap>../../../../../../Downloads/Dekstop/forest-fire-8681951_1920.jpg</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -35,7 +35,7 @@
   <widget class="QPushButton" name="exit">
    <property name="geometry">
     <rect>
-     <x>1450</x>
+     <x>1460</x>
      <y>870</y>
      <width>81</width>
      <height>61</height>
@@ -78,7 +78,7 @@ QPushButton:disabled {
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>fire-exit.png</normaloff>fire-exit.png</iconset>
+     <normaloff>../../../../../../Downloads/Dekstop/fire-exit.png</normaloff>../../../../../../Downloads/Dekstop/fire-exit.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -88,9 +88,12 @@ QPushButton:disabled {
    </property>
   </widget>
   <widget class="QPushButton" name="startt">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>1210</x>
+     <x>1360</x>
      <y>870</y>
      <width>81</width>
      <height>61</height>
@@ -125,7 +128,7 @@ QPushButton:disabled {
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>vehicle.png</normaloff>vehicle.png</iconset>
+     <normaloff>../../../../../../Downloads/Dekstop/vehicle.png</normaloff>../../../../../../Downloads/Dekstop/vehicle.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -134,34 +137,38 @@ QPushButton:disabled {
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="setting">
+  <widget class="QCheckBox" name="checkstik">
    <property name="geometry">
     <rect>
-     <x>1330</x>
-     <y>870</y>
+     <x>1410</x>
+     <y>950</y>
      <width>81</width>
      <height>61</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton {
+    <string notr="true">QCheckBox {
     border-radius: 15px;
     border-right: 1px solid #aaaaaa;
     border-bottom: 1px solid #aaaaaa;
     background-color: transparent; /* Latar belakang transparan */
 }
 
-QPushButton:pressed {
+QCheckBox::indicator { 
+	border: none; 
+	background-color: transparent; }
+
+QQCheckBoxn:pressed {
     background-color: rgba(13, 47, 114, 0.4); /* Warna biru gelap dengan transparansi */
     color: #fffffe;
 }
 
-QPushButton:hover:!pressed {
+QQCheckBox:hover:!pressed {
     background-color: rgba(225, 244, 255, 0.3); /* Warna biru muda dengan transparansi */
     color: #0c2f70;
 }
 
-QPushButton:disabled {
+QQCheckBox:disabled {
     background-color: rgba(170, 170, 170, 0.2); /* Warna abu-abu dengan transparansi */
     color: #ffffff;
 }
@@ -172,13 +179,19 @@ QPushButton:disabled {
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>tools-and-utensils.png</normaloff>tools-and-utensils.png</iconset>
+     <normaloff>../../../../../../Downloads/Dekstop/game-controller (1).png</normaloff>../../../../../../Downloads/Dekstop/game-controller (1).png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>50</width>
      <height>50</height>
     </size>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -210,6 +223,63 @@ QPushButton:disabled {
    </property>
    <property name="indent">
     <number>-3</number>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkstir">
+   <property name="geometry">
+    <rect>
+     <x>1510</x>
+     <y>950</y>
+     <width>81</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QCheckBox {
+    border-radius: 15px;
+    border-right: 1px solid #aaaaaa;
+    border-bottom: 1px solid #aaaaaa;
+    background-color: transparent; /* Latar belakang transparan */
+}
+
+QCheckBox::indicator { 
+	border: none; 
+	background-color: transparent; }
+
+QQCheckBoxn:pressed {
+    background-color: rgba(13, 47, 114, 0.4); /* Warna biru gelap dengan transparansi */
+    color: #fffffe;
+}
+
+QQCheckBox:hover:!pressed {
+    background-color: rgba(225, 244, 255, 0.3); /* Warna biru muda dengan transparansi */
+    color: #0c2f70;
+}
+
+QQCheckBox:disabled {
+    background-color: rgba(170, 170, 170, 0.2); /* Warna abu-abu dengan transparansi */
+    color: #ffffff;
+}
+</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../../../Downloads/Dekstop/steering-wheel.png</normaloff>../../../../../../Downloads/Dekstop/steering-wheel.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
